fix: some actions and test fixes